--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,12 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.todo {
+  display: flex;
+  position: fixed;
+  top: 7.5VH;
+  left: 20VW;
+  width: 80VW;
+  height: 92.5VH;
+}
