Nova caixa de filtros

--- a/src/pages/time-entry/index.css
+++ b/src/pages/time-entry/index.css
@@ -14,4 +14,9 @@
     width: 20%;
     border: 1px solid white !important;
     line-height: 50% !important;
+    box-shadow: 0.5VW 0.5VH 5px black;
+}
+
+.but:hover {
+    background-color: #251680 !important;
 }
