--- a/src/pages/time-entry/index.css
+++ b/src/pages/time-entry/index.css
@@ -7,6 +7,12 @@
     text-align: left;
 }
 
+.dropdown-menu{
+    top: 0;
+    width: 100% !important;
+    text-align: center !important;
+}
+
 .but {
     background-color: transparent !important;
     color: white !important;
@@ -15,8 +21,13 @@
     border: 1px solid white !important;
     line-height: 50% !important;
     box-shadow: 0.5VW 0.5VH 5px black;
+    z-index: 0 !important;
 }
 
 .but:hover {
     background-color: #251680 !important;
+}
+
+.text-box {
+    width: 100% !important;
 }
