--- a/src/pages/time-entry/index.css
+++ b/src/pages/time-entry/index.css
@@ -22,6 +22,7 @@
     line-height: 50% !important;
     box-shadow: 0.5VW 0.5VH 5px black;
     z-index: 0 !important;
+    margin-left: 1VW;
 }
 
 .but:hover {
