--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,19 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+.table{
+  background-color: white;
+  height: 44vh;
+  border-collapse: separate;
+  border-radius: 10px;
+  margin-top: 3VH;
+}
+.tabela{
+ 
+ 
+ 
+  
+  height: 40px;
+  border-bottom: 1px solid white;
+  color: white;
+}
