Novo form de apontamento

--- a/src/pages/time-entry/index.css
+++ b/src/pages/time-entry/index.css
@@ -23,6 +23,7 @@
     box-shadow: 0.5VW 0.5VH 5px black;
     z-index: 0 !important;
     margin-left: 1VW;
+    font-size: 1VH;
 }
 
 .but:hover {
@@ -37,7 +38,7 @@
     width: 90% !important;
 }
 
-.formulario-row{
+.formulario-row-center{
     position: relative;
     top: 50%;
     transform: translateY(-50%);
