--- a/src/pages/resourcesAllocation/index.css
+++ b/src/pages/resourcesAllocation/index.css
@@ -6,26 +6,27 @@
 }
 
 .divFormulario{
-    height: 20VH;
+    height: 50VH;
     width: 70vw;
     position: absolute;
     top: 45%;
     left: 50%;
     transform: translate(-50%, -50%);
-
+    border-radius: 10px;
 }
 .divFormulario2{
-    height: 20VH;
+    height: 35VH;
     width: 70vw;
     position: absolute;
     top: 73%;
     left: 50%;
     transform: translate(-50%, -50%);
-
+    border-radius: 10px;
 }
 .divFormulario3{
-    height: 20VH;
+    height: 14VH;
     width: 70vw;
+    margin-bottom: 20px;
     position: absolute;
     top: 105%;
     left: 50%;
@@ -35,7 +36,7 @@
 
 .fundoForm{
     background-color: #2B47AA;
-    color: white;
+    color: white;   
 }
 
 .divHeader{
