--- a/src/pages/login/style.scss
+++ b/src/pages/login/style.scss
@@ -14,6 +14,7 @@
       flex-direction: column;
   
       .image {
+        margin-top: 5%;
           margin-left: 25%;
         width: 21em;
         img {
