--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,7 @@ code {
   border-collapse: separate;
   border-radius: 10px;
   margin-top: 3VH;
+  vertical-align: top !important;
 }
 .tabela{
   height: 40px;
